cmake_minimum_required(VERSION 3.10)
project(phlib)

# …Ë÷√ C++17 ±Í◊º
set(CMAKE_CXX_STANDARD 17)

add_definitions(-DUNICODE -D_UNICODE)
add_definitions(-D_PHLIB_)

include_directories(${CMAKE_CURRENT_LIST_DIR}/include)
include_directories(${CMAKE_CURRENT_LIST_DIR}/../phnt/include)

source_group("" FILES
    ${CMAKE_CURRENT_LIST_DIR}/./apiimport.c
    ${CMAKE_CURRENT_LIST_DIR}/./appresolver.c
    ${CMAKE_CURRENT_LIST_DIR}/./avltree.c
    ${CMAKE_CURRENT_LIST_DIR}/./basesup.c
    ${CMAKE_CURRENT_LIST_DIR}/./bcd.cpp
    ${CMAKE_CURRENT_LIST_DIR}/./circbuf.c
    ${CMAKE_CURRENT_LIST_DIR}/./circbuf_i.h
    ${CMAKE_CURRENT_LIST_DIR}/./colorbox.c
    ${CMAKE_CURRENT_LIST_DIR}/./cpysave.c
    ${CMAKE_CURRENT_LIST_DIR}/./data.c
    ${CMAKE_CURRENT_LIST_DIR}/./dspick.c
    ${CMAKE_CURRENT_LIST_DIR}/./emenu.c
    ${CMAKE_CURRENT_LIST_DIR}/./error.c
    ${CMAKE_CURRENT_LIST_DIR}/./extlv.c
    ${CMAKE_CURRENT_LIST_DIR}/./fastlock.c
    ${CMAKE_CURRENT_LIST_DIR}/./filepool.c
    ${CMAKE_CURRENT_LIST_DIR}/./filestream.c
    ${CMAKE_CURRENT_LIST_DIR}/./format.c
    ${CMAKE_CURRENT_LIST_DIR}/./format_i.h
    ${CMAKE_CURRENT_LIST_DIR}/./format_std.cpp
    ${CMAKE_CURRENT_LIST_DIR}/./global.c
    ${CMAKE_CURRENT_LIST_DIR}/./graph.c
    ${CMAKE_CURRENT_LIST_DIR}/./guisup.c
    ${CMAKE_CURRENT_LIST_DIR}/./handle.c
    ${CMAKE_CURRENT_LIST_DIR}/./hexedit.c
    ${CMAKE_CURRENT_LIST_DIR}/./hndlinfo.c
    ${CMAKE_CURRENT_LIST_DIR}/./http.c
    ${CMAKE_CURRENT_LIST_DIR}/./icotobmp.c
    ${CMAKE_CURRENT_LIST_DIR}/./imgcoherency.c
    ${CMAKE_CURRENT_LIST_DIR}/./json.c
    ${CMAKE_CURRENT_LIST_DIR}/./kph.c
    ${CMAKE_CURRENT_LIST_DIR}/./kphdata.c
    ${CMAKE_CURRENT_LIST_DIR}/./lsasup.c
    ${CMAKE_CURRENT_LIST_DIR}/./mapexlf.c
    ${CMAKE_CURRENT_LIST_DIR}/./mapimg.c
    ${CMAKE_CURRENT_LIST_DIR}/./maplib.c
    ${CMAKE_CURRENT_LIST_DIR}/./md5.c
    ${CMAKE_CURRENT_LIST_DIR}/./md5.h
    ${CMAKE_CURRENT_LIST_DIR}/./native.c
    ${CMAKE_CURRENT_LIST_DIR}/./provider.c
    ${CMAKE_CURRENT_LIST_DIR}/./queuedlock.c
    ${CMAKE_CURRENT_LIST_DIR}/./ref.c
    ${CMAKE_CURRENT_LIST_DIR}/./secdata.c
    ${CMAKE_CURRENT_LIST_DIR}/./secedit.c
    ${CMAKE_CURRENT_LIST_DIR}/./settings.c
    ${CMAKE_CURRENT_LIST_DIR}/./sha.c
    ${CMAKE_CURRENT_LIST_DIR}/./sha.h
    ${CMAKE_CURRENT_LIST_DIR}/./sha256.c
    ${CMAKE_CURRENT_LIST_DIR}/./sha256.h
    ${CMAKE_CURRENT_LIST_DIR}/./svcsup.c
    ${CMAKE_CURRENT_LIST_DIR}/./symprv.c
    ${CMAKE_CURRENT_LIST_DIR}/./sync.c
    ${CMAKE_CURRENT_LIST_DIR}/./theme.c
    ${CMAKE_CURRENT_LIST_DIR}/./treenew.c
    ${CMAKE_CURRENT_LIST_DIR}/./util.c
    ${CMAKE_CURRENT_LIST_DIR}/./verify.c
    ${CMAKE_CURRENT_LIST_DIR}/./workqueue.c
    ${CMAKE_CURRENT_LIST_DIR}/./wslsup.c
)

source_group("include" FILES
    ${CMAKE_CURRENT_LIST_DIR}/include/apiimport.h
    ${CMAKE_CURRENT_LIST_DIR}/include/appresolver.h
    ${CMAKE_CURRENT_LIST_DIR}/include/appresolverp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/banned.h
    ${CMAKE_CURRENT_LIST_DIR}/include/bcd.h
    ${CMAKE_CURRENT_LIST_DIR}/include/circbuf.h
    ${CMAKE_CURRENT_LIST_DIR}/include/circbuf_h.h
    ${CMAKE_CURRENT_LIST_DIR}/include/colorbox.h
    ${CMAKE_CURRENT_LIST_DIR}/include/cpysave.h
    ${CMAKE_CURRENT_LIST_DIR}/include/dltmgr.h
    ${CMAKE_CURRENT_LIST_DIR}/include/dspick.h
    ${CMAKE_CURRENT_LIST_DIR}/include/emenu.h
    ${CMAKE_CURRENT_LIST_DIR}/include/exlf.h
    ${CMAKE_CURRENT_LIST_DIR}/include/exprodid.h
    ${CMAKE_CURRENT_LIST_DIR}/include/fastlock.h
    ${CMAKE_CURRENT_LIST_DIR}/include/filepool.h
    ${CMAKE_CURRENT_LIST_DIR}/include/filepoolp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/filestream.h
    ${CMAKE_CURRENT_LIST_DIR}/include/filestreamp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/graph.h
    ${CMAKE_CURRENT_LIST_DIR}/include/guisup.h
    ${CMAKE_CURRENT_LIST_DIR}/include/guisupp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/handle.h
    ${CMAKE_CURRENT_LIST_DIR}/include/handlep.h
    ${CMAKE_CURRENT_LIST_DIR}/include/hexedit.h
    ${CMAKE_CURRENT_LIST_DIR}/include/hexeditp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/hndlinfo.h
    ${CMAKE_CURRENT_LIST_DIR}/include/json.h
    ${CMAKE_CURRENT_LIST_DIR}/include/kphapi.h
    ${CMAKE_CURRENT_LIST_DIR}/include/kphuser.h
    ${CMAKE_CURRENT_LIST_DIR}/include/kphuserp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/lsasup.h
    ${CMAKE_CURRENT_LIST_DIR}/include/mapimg.h
    ${CMAKE_CURRENT_LIST_DIR}/include/ph.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phbase.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phbasesup.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phconfig.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phdata.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phintrnl.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phnative.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phnativeinl.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phnet.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phsup.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phutil.h
    ${CMAKE_CURRENT_LIST_DIR}/include/provider.h
    ${CMAKE_CURRENT_LIST_DIR}/include/queuedlock.h
    ${CMAKE_CURRENT_LIST_DIR}/include/ref.h
    ${CMAKE_CURRENT_LIST_DIR}/include/refp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/secedit.h
    ${CMAKE_CURRENT_LIST_DIR}/include/seceditp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/settings.h
    ${CMAKE_CURRENT_LIST_DIR}/include/svcsup.h
    ${CMAKE_CURRENT_LIST_DIR}/include/symprv.h
    ${CMAKE_CURRENT_LIST_DIR}/include/symprvp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/templ.h
    ${CMAKE_CURRENT_LIST_DIR}/include/treenew.h
    ${CMAKE_CURRENT_LIST_DIR}/include/treenewp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/verify.h
    ${CMAKE_CURRENT_LIST_DIR}/include/verifyp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/workqueue.h
    ${CMAKE_CURRENT_LIST_DIR}/include/workqueuep.h
    ${CMAKE_CURRENT_LIST_DIR}/include/wslsup.h
    ${CMAKE_CURRENT_LIST_DIR}/include/xorstr.h
)

set(SOURCE_FILES
    ${CMAKE_CURRENT_LIST_DIR}/./apiimport.c
    ${CMAKE_CURRENT_LIST_DIR}/./appresolver.c
    ${CMAKE_CURRENT_LIST_DIR}/./avltree.c
    ${CMAKE_CURRENT_LIST_DIR}/./basesup.c
    ${CMAKE_CURRENT_LIST_DIR}/./bcd.cpp
    ${CMAKE_CURRENT_LIST_DIR}/./circbuf.c
    ${CMAKE_CURRENT_LIST_DIR}/./circbuf_i.h
    ${CMAKE_CURRENT_LIST_DIR}/./colorbox.c
    ${CMAKE_CURRENT_LIST_DIR}/./cpysave.c
    ${CMAKE_CURRENT_LIST_DIR}/./data.c
    ${CMAKE_CURRENT_LIST_DIR}/./dspick.c
    ${CMAKE_CURRENT_LIST_DIR}/./emenu.c
    ${CMAKE_CURRENT_LIST_DIR}/./error.c
    ${CMAKE_CURRENT_LIST_DIR}/./extlv.c
    ${CMAKE_CURRENT_LIST_DIR}/./fastlock.c
    ${CMAKE_CURRENT_LIST_DIR}/./filepool.c
    ${CMAKE_CURRENT_LIST_DIR}/./filestream.c
    ${CMAKE_CURRENT_LIST_DIR}/./format.c
    ${CMAKE_CURRENT_LIST_DIR}/./format_i.h
    ${CMAKE_CURRENT_LIST_DIR}/./format_std.cpp
    ${CMAKE_CURRENT_LIST_DIR}/./global.c
    ${CMAKE_CURRENT_LIST_DIR}/./graph.c
    ${CMAKE_CURRENT_LIST_DIR}/./guisup.c
    ${CMAKE_CURRENT_LIST_DIR}/./handle.c
    ${CMAKE_CURRENT_LIST_DIR}/./hexedit.c
    ${CMAKE_CURRENT_LIST_DIR}/./hndlinfo.c
    ${CMAKE_CURRENT_LIST_DIR}/./http.c
    ${CMAKE_CURRENT_LIST_DIR}/./icotobmp.c
    ${CMAKE_CURRENT_LIST_DIR}/./imgcoherency.c
    ${CMAKE_CURRENT_LIST_DIR}/./json.c
    ${CMAKE_CURRENT_LIST_DIR}/./kph.c
    ${CMAKE_CURRENT_LIST_DIR}/./kphdata.c
    ${CMAKE_CURRENT_LIST_DIR}/./lsasup.c
    ${CMAKE_CURRENT_LIST_DIR}/./mapexlf.c
    ${CMAKE_CURRENT_LIST_DIR}/./mapimg.c
    ${CMAKE_CURRENT_LIST_DIR}/./maplib.c
    ${CMAKE_CURRENT_LIST_DIR}/./md5.c
    ${CMAKE_CURRENT_LIST_DIR}/./md5.h
    ${CMAKE_CURRENT_LIST_DIR}/./native.c
    ${CMAKE_CURRENT_LIST_DIR}/./provider.c
    ${CMAKE_CURRENT_LIST_DIR}/./queuedlock.c
    ${CMAKE_CURRENT_LIST_DIR}/./ref.c
    ${CMAKE_CURRENT_LIST_DIR}/./secdata.c
    ${CMAKE_CURRENT_LIST_DIR}/./secedit.c
    ${CMAKE_CURRENT_LIST_DIR}/./settings.c
    ${CMAKE_CURRENT_LIST_DIR}/./sha.c
    ${CMAKE_CURRENT_LIST_DIR}/./sha.h
    ${CMAKE_CURRENT_LIST_DIR}/./sha256.c
    ${CMAKE_CURRENT_LIST_DIR}/./sha256.h
    ${CMAKE_CURRENT_LIST_DIR}/./svcsup.c
    ${CMAKE_CURRENT_LIST_DIR}/./symprv.c
    ${CMAKE_CURRENT_LIST_DIR}/./sync.c
    ${CMAKE_CURRENT_LIST_DIR}/./theme.c
    ${CMAKE_CURRENT_LIST_DIR}/./treenew.c
    ${CMAKE_CURRENT_LIST_DIR}/./util.c
    ${CMAKE_CURRENT_LIST_DIR}/./verify.c
    ${CMAKE_CURRENT_LIST_DIR}/./workqueue.c
    ${CMAKE_CURRENT_LIST_DIR}/./wslsup.c
    ${CMAKE_CURRENT_LIST_DIR}/include/apiimport.h
    ${CMAKE_CURRENT_LIST_DIR}/include/appresolver.h
    ${CMAKE_CURRENT_LIST_DIR}/include/appresolverp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/banned.h
    ${CMAKE_CURRENT_LIST_DIR}/include/bcd.h
    ${CMAKE_CURRENT_LIST_DIR}/include/circbuf.h
    ${CMAKE_CURRENT_LIST_DIR}/include/circbuf_h.h
    ${CMAKE_CURRENT_LIST_DIR}/include/colorbox.h
    ${CMAKE_CURRENT_LIST_DIR}/include/cpysave.h
    ${CMAKE_CURRENT_LIST_DIR}/include/dltmgr.h
    ${CMAKE_CURRENT_LIST_DIR}/include/dspick.h
    ${CMAKE_CURRENT_LIST_DIR}/include/emenu.h
    ${CMAKE_CURRENT_LIST_DIR}/include/exlf.h
    ${CMAKE_CURRENT_LIST_DIR}/include/exprodid.h
    ${CMAKE_CURRENT_LIST_DIR}/include/fastlock.h
    ${CMAKE_CURRENT_LIST_DIR}/include/filepool.h
    ${CMAKE_CURRENT_LIST_DIR}/include/filepoolp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/filestream.h
    ${CMAKE_CURRENT_LIST_DIR}/include/filestreamp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/graph.h
    ${CMAKE_CURRENT_LIST_DIR}/include/guisup.h
    ${CMAKE_CURRENT_LIST_DIR}/include/guisupp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/handle.h
    ${CMAKE_CURRENT_LIST_DIR}/include/handlep.h
    ${CMAKE_CURRENT_LIST_DIR}/include/hexedit.h
    ${CMAKE_CURRENT_LIST_DIR}/include/hexeditp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/hndlinfo.h
    ${CMAKE_CURRENT_LIST_DIR}/include/json.h
    ${CMAKE_CURRENT_LIST_DIR}/include/kphapi.h
    ${CMAKE_CURRENT_LIST_DIR}/include/kphuser.h
    ${CMAKE_CURRENT_LIST_DIR}/include/kphuserp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/lsasup.h
    ${CMAKE_CURRENT_LIST_DIR}/include/mapimg.h
    ${CMAKE_CURRENT_LIST_DIR}/include/ph.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phbase.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phbasesup.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phconfig.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phdata.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phintrnl.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phnative.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phnativeinl.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phnet.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phsup.h
    ${CMAKE_CURRENT_LIST_DIR}/include/phutil.h
    ${CMAKE_CURRENT_LIST_DIR}/include/provider.h
    ${CMAKE_CURRENT_LIST_DIR}/include/queuedlock.h
    ${CMAKE_CURRENT_LIST_DIR}/include/ref.h
    ${CMAKE_CURRENT_LIST_DIR}/include/refp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/secedit.h
    ${CMAKE_CURRENT_LIST_DIR}/include/seceditp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/settings.h
    ${CMAKE_CURRENT_LIST_DIR}/include/svcsup.h
    ${CMAKE_CURRENT_LIST_DIR}/include/symprv.h
    ${CMAKE_CURRENT_LIST_DIR}/include/symprvp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/templ.h
    ${CMAKE_CURRENT_LIST_DIR}/include/treenew.h
    ${CMAKE_CURRENT_LIST_DIR}/include/treenewp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/verify.h
    ${CMAKE_CURRENT_LIST_DIR}/include/verifyp.h
    ${CMAKE_CURRENT_LIST_DIR}/include/workqueue.h
    ${CMAKE_CURRENT_LIST_DIR}/include/workqueuep.h
    ${CMAKE_CURRENT_LIST_DIR}/include/wslsup.h
    ${CMAKE_CURRENT_LIST_DIR}/include/xorstr.h
)

add_library(${PROJECT_NAME} ${SOURCE_FILES})
